2007-03-10  Miloslav Trmac  <mitr@redhat.com>

	* userhelper.c (pipe_conv_exec_start): Don't run an empty transaction,
	it apparently serves no purpose and it may reference PAM data after
	freeing it.

	* userhelper-wrap.c (userhelper_parse_childout): Add a headline when
	changing user password.  Simplify the code a bit.

	* usermount.c (format): Use a GtkComboBox instead of obsolete
	GtkOptionMenu.
	* usermode.glade (userinfo.shellmenu): Use a GtkComboBox instead of
	obsolete GtkOptionMenu.
	* userinfo.c (USERINFO_DATA_NAME): Remove.
	(struct UserInfo.shellmenu): Allow freeing the value.
	(shell_changed): Replace shell_activate ().  Work with GtkComboBox.
	Pass userinfo directly instead of using USERINFO_DATA_NAME.
	(create_userinfo_window): Use GtkComboBox for shellmenu.  Pass userinfo
	to shell_changed () and on_ok_clicked () directly instead of using
	USERINFO_DATA_NAME.
	(on_ok_clicked): Pass userinfo directly instead of using
	USERINFO_DATA_NAME.

2007-03-09  Miloslav Trmac  <mitr@redhat.com>

	* userhelper.c (wrap): Disable exit status interpretation by the parent
	when the GUI mode is disabled.

	* configure.in: Release 1.89.
	* NEWS: Update.

	* glade.strings.h: Remove, intltool handles glade files directly.
	* po/POTFILES.in: Don't use glade.strings.h

	* Makefile.am (EXTRA_DIST): Don't ship mkinstalldirs and usermode.spec.
	Update intltool script location.

	* usermode.spec: Remove to avoid divergence from Fedora CVS.

	* configure.in: Replace obsolete macros.  Use AC_MSG_CHECKING instead
	of custom AC_MSG_RESULT usage.  Quote all m4 macro invocations
	and shell variable expansions where necessary.
	(AC_INIT): Move the main version number here from usermode.spec.
	(AM_INIT_AUTOMAKE): Use dist-bzip2, Wall.
	(PAM_LIBS): Don't pull in -ldl unnecessarily.
	(ALL_LINGUAS): Move ...
	* po/LINGUAS: ... here, add missing languages.

	* autogen.sh: Don't use rpm's opt flags by default.  Update for