@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 1997-2001 Red Hat, Inc.
+ * Copyright (C) 1997-2001, 2007 Red Hat, Inc.
  *
  * This is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by
@@ -20,8 +20,6 @@
 #define __USERHELPER_H__
 
 #include "config.h"
-
-#define _(String) gettext(String)
 
 /* Descriptors used to communicate between userhelper and consolhelper. */
 #define UH_INFILENO 3
